# nepomuktvnamer

./: AUTHORS  CMakeLists.txt  ChangeLog  main.cpp  nepomuktvnamer-config.h.cmake  nepomuktvnamer.desktop  newepisodechecker.py  tvnamer.cpp  tvnamer.h  tvshowfilenameanalyzer.cpp  tvshowfilenameanalyzer.h
cleaner/: CMakeLists.txt  nepomuktvseasonduplicatescleaner.desktop  nepomuktvseriesduplicatescleaner.desktop  tvseasonduplicatescleaningjob.cpp  tvseasonduplicatescleaningjob.h  tvseriesduplicatescleaningjob.cpp  tvseriesduplicatescleaningjob.h
kioslave/: CMakeLists.txt  Messages.sh  kio_tvshow.cpp  kio_tvshow.h  nepomuktvshowthumbnail.desktop  tvshow.protocol  tvshowthumbcreator.cpp  tvshowthumbcreator.h
nao/: freedesktopicon.h  party.h  symbol.h  tag.h
nfo/: application.h  archive.h  archiveitem.h  attachment.h  audio.h  bookmark.h  bookmarkfolder.h  compressiontype.h  cursor.h  datacontainer.h  deletedresource.h  document.h  embeddedfiledataobject.h  encryptionstatus.h  executable.h  filedataobject.h  filehash.h  filesystem.h  filesystemimage.h  folder.h  font.h  harddiskpartition.h  htmldocument.h  icon.h  image.h  media.h  mediafilelistentry.h  medialist.h  mediastream.h  mindmap.h  operatingsystem.h  paginatedtextdocument.h  plaintextdocument.h  presentation.h  rasterimage.h  remotedataobject.h  remoteportaddress.h  software.h  softwareitem.h  softwareservice.h  (+8 more)
nie/: dataobject.h  datasource.h  informationelement.h
nmm/: movie.h  musicalbum.h  musicpiece.h  tvseries.h  tvshow.h
plasma/: CMakeLists.txt  nepomuktvshow.operations  nepomuktvshowengine.cpp  nepomuktvshowengine.h  nepomuktvshowsearchjob.cpp  nepomuktvshowsearchjob.h  nepomuktvshowservice.cpp  nepomuktvshowservice.h  plasma-engine-nepomuktvshow.desktop
plasma/package/: metadata.desktop
plasma/package/contents/ui/: main.qml
service/: CMakeLists.txt  nepomuktvnamerservice.desktop  tvnamerservice.cpp  tvnamerservice.h
src/: CMakeLists.txt  Messages.sh  main.cpp  nepomuktvnamer.desktop  tvnamer.cpp  tvnamer.h  tvshowfilenameanalyzer.cpp
src/nco/: affiliation.h  contact.h  contactgroup.h  contactlist.h  contactlistdataobject.h  contactmedium.h  gender.h  imaccount.h  imcapability.h  imstatustype.h  organizationcontact.h  personcontact.h  postaladdress.h  role.h
src/nfo/: application.h  archive.h  archiveitem.h  attachment.h  audio.h  bookmark.h  bookmarkfolder.h  compressiontype.h  cursor.h  datacontainer.h  deletedresource.h  document.h  embeddedfiledataobject.h  encryptionstatus.h  executable.h  filedataobject.h  filehash.h  filesystem.h  filesystemimage.h  folder.h  font.h  harddiskpartition.h  htmldocument.h  icon.h  image.h  localfiledataobject.h  media.h  mediafilelistentry.h  medialist.h  mediastream.h  mindmap.h  operatingsystem.h  paginatedtextdocument.h  plaintextdocument.h  presentation.h  rasterimage.h  remotedataobject.h  remoteportaddress.h  software.h  softwareitem.h  (+10 more)
src/nie/: dataobject.h  datasource.h  informationelement.h
src/nmm/: movie.h  musicalbum.h  musicpiece.h  tvseason.h  tvseries.h  tvshow.h
tools/: CMakeLists.txt  nepomuk-set-watched.desktop  newepisodechecker.py
